// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkExtraLargeSpinner should render correctly 1`] = `
<svg
  className="bpk-spinner bpk-spinner--extra-large bpk-spinner--dark"
  height="36"
  viewBox="0 0 36 36"
  width="36"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M26.556 20.78l8.564 2.782A17.94 17.94 0 0 0 36 18h-9c0 .97-.159 1.904-.444 2.78z"
    opacity=".25"
  />
  <path
    d="M12.717 25.27L7.42 32.56a17.988 17.988 0 0 0 5.017 2.56l2.782-8.563a8.985 8.985 0 0 1-2.502-1.286z"
    opacity=".6"
  />
  <path
    d="M9.444 20.78L.88 23.561a17.908 17.908 0 0 0 2.561 5.016l7.288-5.296a8.944 8.944 0 0 1-1.285-2.503z"
    opacity=".7"
  />
  <path
    d="M15.22 26.556l-2.782 8.564A17.94 17.94 0 0 0 18 36v-9c-.944 0-1.882-.15-2.78-.444z"
    opacity=".55"
  />
  <path
    d="M20.78 26.556l2.782 8.564a17.908 17.908 0 0 0 5.016-2.561l-5.296-7.288a8.944 8.944 0 0 1-2.503 1.285z"
    opacity=".45"
  />
  <path
    d="M26.556 20.78a8.944 8.944 0 0 1-1.286 2.502l7.289 5.296a17.988 17.988 0 0 0 2.56-5.016l-8.563-2.783z"
    opacity=".3"
  />
  <path
    d="M18 27v9c1.942 0 3.81-.31 5.562-.88l-2.783-8.564A8.966 8.966 0 0 1 18 27z"
    opacity=".5"
  />
  <path
    d="M23.283 25.27l5.296 7.289a18.09 18.09 0 0 0 3.981-3.981l-7.288-5.296a9.065 9.065 0 0 1-1.989 1.988z"
    opacity=".35"
  />
  <path
    d="M9 18H0c0 1.942.31 3.81.88 5.562l8.564-2.783A8.965 8.965 0 0 1 9 18z"
    opacity=".75"
  />
  <path
    d="M10.73 23.283l-7.29 5.296a18.09 18.09 0 0 0 3.981 3.981l5.297-7.288a9.065 9.065 0 0 1-1.99-1.989z"
    opacity=".65"
  />
  <path
    d="M9.444 15.22L.88 12.438A17.94 17.94 0 0 0 0 18h9c0-.97.159-1.904.444-2.78z"
    opacity=".8"
  />
  <path
    d="M23.283 10.73l5.296-7.289a17.988 17.988 0 0 0-5.015-2.56L20.78 9.444a8.99 8.99 0 0 1 2.502 1.285z"
    opacity=".05"
  />
  <path
    d="M26.556 15.22l8.564-2.782a17.908 17.908 0 0 0-2.561-5.016l-7.288 5.297c.55.754.99 1.594 1.285 2.502z"
    opacity=".15"
  />
  <path
    d="M27 18h9c0-1.942-.31-3.81-.88-5.562l-8.564 2.782c.285.876.444 1.81.444 2.78z"
    opacity=".2"
  />
  <path
    d="M25.27 12.717l7.29-5.297a18.09 18.09 0 0 0-3.981-3.98l-5.296 7.288a9.064 9.064 0 0 1 1.988 1.989z"
    opacity=".1"
  />
  <path
    d="M10.73 12.717L3.44 7.422a17.925 17.925 0 0 0-2.56 5.016l8.564 2.782a8.973 8.973 0 0 1 1.285-2.503z"
    opacity=".85"
  />
  <path
    d="M12.717 10.73L7.422 3.44A18.105 18.105 0 0 0 3.44 7.421l7.288 5.297a9.065 9.065 0 0 1 1.989-1.99z"
    opacity=".9"
  />
  <path
    d="M18 9V0c-1.942 0-3.81.31-5.562.88l2.782 8.564A8.965 8.965 0 0 1 18 9z"
  />
  <path
    d="M15.22 9.444L12.438.88a17.925 17.925 0 0 0-5.016 2.56l5.297 7.288a8.979 8.979 0 0 1 2.502-1.284z"
    opacity=".95"
  />
</svg>
`;

exports[`BpkExtraLargeSpinner should render correctly with a "className" attribute 1`] = `
<svg
  className="bpk-spinner bpk-spinner--extra-large bpk-spinner--dark my-custom-class"
  height="36"
  viewBox="0 0 36 36"
  width="36"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M26.556 20.78l8.564 2.782A17.94 17.94 0 0 0 36 18h-9c0 .97-.159 1.904-.444 2.78z"
    opacity=".25"
  />
  <path
    d="M12.717 25.27L7.42 32.56a17.988 17.988 0 0 0 5.017 2.56l2.782-8.563a8.985 8.985 0 0 1-2.502-1.286z"
    opacity=".6"
  />
  <path
    d="M9.444 20.78L.88 23.561a17.908 17.908 0 0 0 2.561 5.016l7.288-5.296a8.944 8.944 0 0 1-1.285-2.503z"
    opacity=".7"
  />
  <path
    d="M15.22 26.556l-2.782 8.564A17.94 17.94 0 0 0 18 36v-9c-.944 0-1.882-.15-2.78-.444z"
    opacity=".55"
  />
  <path
    d="M20.78 26.556l2.782 8.564a17.908 17.908 0 0 0 5.016-2.561l-5.296-7.288a8.944 8.944 0 0 1-2.503 1.285z"
    opacity=".45"
  />
  <path
    d="M26.556 20.78a8.944 8.944 0 0 1-1.286 2.502l7.289 5.296a17.988 17.988 0 0 0 2.56-5.016l-8.563-2.783z"
    opacity=".3"
  />
  <path
    d="M18 27v9c1.942 0 3.81-.31 5.562-.88l-2.783-8.564A8.966 8.966 0 0 1 18 27z"
    opacity=".5"
  />
  <path
    d="M23.283 25.27l5.296 7.289a18.09 18.09 0 0 0 3.981-3.981l-7.288-5.296a9.065 9.065 0 0 1-1.989 1.988z"
    opacity=".35"
  />
  <path
    d="M9 18H0c0 1.942.31 3.81.88 5.562l8.564-2.783A8.965 8.965 0 0 1 9 18z"
    opacity=".75"
  />
  <path
    d="M10.73 23.283l-7.29 5.296a18.09 18.09 0 0 0 3.981 3.981l5.297-7.288a9.065 9.065 0 0 1-1.99-1.989z"
    opacity=".65"
  />
  <path
    d="M9.444 15.22L.88 12.438A17.94 17.94 0 0 0 0 18h9c0-.97.159-1.904.444-2.78z"
    opacity=".8"
  />
  <path
    d="M23.283 10.73l5.296-7.289a17.988 17.988 0 0 0-5.015-2.56L20.78 9.444a8.99 8.99 0 0 1 2.502 1.285z"
    opacity=".05"
  />
  <path
    d="M26.556 15.22l8.564-2.782a17.908 17.908 0 0 0-2.561-5.016l-7.288 5.297c.55.754.99 1.594 1.285 2.502z"
    opacity=".15"
  />
  <path
    d="M27 18h9c0-1.942-.31-3.81-.88-5.562l-8.564 2.782c.285.876.444 1.81.444 2.78z"
    opacity=".2"
  />
  <path
    d="M25.27 12.717l7.29-5.297a18.09 18.09 0 0 0-3.981-3.98l-5.296 7.288a9.064 9.064 0 0 1 1.988 1.989z"
    opacity=".1"
  />
  <path
    d="M10.73 12.717L3.44 7.422a17.925 17.925 0 0 0-2.56 5.016l8.564 2.782a8.973 8.973 0 0 1 1.285-2.503z"
    opacity=".85"
  />
  <path
    d="M12.717 10.73L7.422 3.44A18.105 18.105 0 0 0 3.44 7.421l7.288 5.297a9.065 9.065 0 0 1 1.989-1.99z"
    opacity=".9"
  />
  <path
    d="M18 9V0c-1.942 0-3.81.31-5.562.88l2.782 8.564A8.965 8.965 0 0 1 18 9z"
  />
  <path
    d="M15.22 9.444L12.438.88a17.925 17.925 0 0 0-5.016 2.56l5.297 7.288a8.979 8.979 0 0 1 2.502-1.284z"
    opacity=".95"
  />
</svg>
`;

exports[`BpkExtraLargeSpinner should render correctly with type as light 1`] = `
<svg
  className="bpk-spinner bpk-spinner--extra-large bpk-spinner--light"
  height="36"
  viewBox="0 0 36 36"
  width="36"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M26.556 20.78l8.564 2.782A17.94 17.94 0 0 0 36 18h-9c0 .97-.159 1.904-.444 2.78z"
    opacity=".25"
  />
  <path
    d="M12.717 25.27L7.42 32.56a17.988 17.988 0 0 0 5.017 2.56l2.782-8.563a8.985 8.985 0 0 1-2.502-1.286z"
    opacity=".6"
  />
  <path
    d="M9.444 20.78L.88 23.561a17.908 17.908 0 0 0 2.561 5.016l7.288-5.296a8.944 8.944 0 0 1-1.285-2.503z"
    opacity=".7"
  />
  <path
    d="M15.22 26.556l-2.782 8.564A17.94 17.94 0 0 0 18 36v-9c-.944 0-1.882-.15-2.78-.444z"
    opacity=".55"
  />
  <path
    d="M20.78 26.556l2.782 8.564a17.908 17.908 0 0 0 5.016-2.561l-5.296-7.288a8.944 8.944 0 0 1-2.503 1.285z"
    opacity=".45"
  />
  <path
    d="M26.556 20.78a8.944 8.944 0 0 1-1.286 2.502l7.289 5.296a17.988 17.988 0 0 0 2.56-5.016l-8.563-2.783z"
    opacity=".3"
  />
  <path
    d="M18 27v9c1.942 0 3.81-.31 5.562-.88l-2.783-8.564A8.966 8.966 0 0 1 18 27z"
    opacity=".5"
  />
  <path
    d="M23.283 25.27l5.296 7.289a18.09 18.09 0 0 0 3.981-3.981l-7.288-5.296a9.065 9.065 0 0 1-1.989 1.988z"
    opacity=".35"
  />
  <path
    d="M9 18H0c0 1.942.31 3.81.88 5.562l8.564-2.783A8.965 8.965 0 0 1 9 18z"
    opacity=".75"
  />
  <path
    d="M10.73 23.283l-7.29 5.296a18.09 18.09 0 0 0 3.981 3.981l5.297-7.288a9.065 9.065 0 0 1-1.99-1.989z"
    opacity=".65"
  />
  <path
    d="M9.444 15.22L.88 12.438A17.94 17.94 0 0 0 0 18h9c0-.97.159-1.904.444-2.78z"
    opacity=".8"
  />
  <path
    d="M23.283 10.73l5.296-7.289a17.988 17.988 0 0 0-5.015-2.56L20.78 9.444a8.99 8.99 0 0 1 2.502 1.285z"
    opacity=".05"
  />
  <path
    d="M26.556 15.22l8.564-2.782a17.908 17.908 0 0 0-2.561-5.016l-7.288 5.297c.55.754.99 1.594 1.285 2.502z"
    opacity=".15"
  />
  <path
    d="M27 18h9c0-1.942-.31-3.81-.88-5.562l-8.564 2.782c.285.876.444 1.81.444 2.78z"
    opacity=".2"
  />
  <path
    d="M25.27 12.717l7.29-5.297a18.09 18.09 0 0 0-3.981-3.98l-5.296 7.288a9.064 9.064 0 0 1 1.988 1.989z"
    opacity=".1"
  />
  <path
    d="M10.73 12.717L3.44 7.422a17.925 17.925 0 0 0-2.56 5.016l8.564 2.782a8.973 8.973 0 0 1 1.285-2.503z"
    opacity=".85"
  />
  <path
    d="M12.717 10.73L7.422 3.44A18.105 18.105 0 0 0 3.44 7.421l7.288 5.297a9.065 9.065 0 0 1 1.989-1.99z"
    opacity=".9"
  />
  <path
    d="M18 9V0c-1.942 0-3.81.31-5.562.88l2.782 8.564A8.965 8.965 0 0 1 18 9z"
  />
  <path
    d="M15.22 9.444L12.438.88a17.925 17.925 0 0 0-5.016 2.56l5.297 7.288a8.979 8.979 0 0 1 2.502-1.284z"
    opacity=".95"
  />
</svg>
`;

exports[`BpkExtraLargeSpinner should render correctly with type as primary 1`] = `
<svg
  className="bpk-spinner bpk-spinner--extra-large bpk-spinner--primary"
  height="36"
  viewBox="0 0 36 36"
  width="36"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M26.556 20.78l8.564 2.782A17.94 17.94 0 0 0 36 18h-9c0 .97-.159 1.904-.444 2.78z"
    opacity=".25"
  />
  <path
    d="M12.717 25.27L7.42 32.56a17.988 17.988 0 0 0 5.017 2.56l2.782-8.563a8.985 8.985 0 0 1-2.502-1.286z"
    opacity=".6"
  />
  <path
    d="M9.444 20.78L.88 23.561a17.908 17.908 0 0 0 2.561 5.016l7.288-5.296a8.944 8.944 0 0 1-1.285-2.503z"
    opacity=".7"
  />
  <path
    d="M15.22 26.556l-2.782 8.564A17.94 17.94 0 0 0 18 36v-9c-.944 0-1.882-.15-2.78-.444z"
    opacity=".55"
  />
  <path
    d="M20.78 26.556l2.782 8.564a17.908 17.908 0 0 0 5.016-2.561l-5.296-7.288a8.944 8.944 0 0 1-2.503 1.285z"
    opacity=".45"
  />
  <path
    d="M26.556 20.78a8.944 8.944 0 0 1-1.286 2.502l7.289 5.296a17.988 17.988 0 0 0 2.56-5.016l-8.563-2.783z"
    opacity=".3"
  />
  <path
    d="M18 27v9c1.942 0 3.81-.31 5.562-.88l-2.783-8.564A8.966 8.966 0 0 1 18 27z"
    opacity=".5"
  />
  <path
    d="M23.283 25.27l5.296 7.289a18.09 18.09 0 0 0 3.981-3.981l-7.288-5.296a9.065 9.065 0 0 1-1.989 1.988z"
    opacity=".35"
  />
  <path
    d="M9 18H0c0 1.942.31 3.81.88 5.562l8.564-2.783A8.965 8.965 0 0 1 9 18z"
    opacity=".75"
  />
  <path
    d="M10.73 23.283l-7.29 5.296a18.09 18.09 0 0 0 3.981 3.981l5.297-7.288a9.065 9.065 0 0 1-1.99-1.989z"
    opacity=".65"
  />
  <path
    d="M9.444 15.22L.88 12.438A17.94 17.94 0 0 0 0 18h9c0-.97.159-1.904.444-2.78z"
    opacity=".8"
  />
  <path
    d="M23.283 10.73l5.296-7.289a17.988 17.988 0 0 0-5.015-2.56L20.78 9.444a8.99 8.99 0 0 1 2.502 1.285z"
    opacity=".05"
  />
  <path
    d="M26.556 15.22l8.564-2.782a17.908 17.908 0 0 0-2.561-5.016l-7.288 5.297c.55.754.99 1.594 1.285 2.502z"
    opacity=".15"
  />
  <path
    d="M27 18h9c0-1.942-.31-3.81-.88-5.562l-8.564 2.782c.285.876.444 1.81.444 2.78z"
    opacity=".2"
  />
  <path
    d="M25.27 12.717l7.29-5.297a18.09 18.09 0 0 0-3.981-3.98l-5.296 7.288a9.064 9.064 0 0 1 1.988 1.989z"
    opacity=".1"
  />
  <path
    d="M10.73 12.717L3.44 7.422a17.925 17.925 0 0 0-2.56 5.016l8.564 2.782a8.973 8.973 0 0 1 1.285-2.503z"
    opacity=".85"
  />
  <path
    d="M12.717 10.73L7.422 3.44A18.105 18.105 0 0 0 3.44 7.421l7.288 5.297a9.065 9.065 0 0 1 1.989-1.99z"
    opacity=".9"
  />
  <path
    d="M18 9V0c-1.942 0-3.81.31-5.562.88l2.782 8.564A8.965 8.965 0 0 1 18 9z"
  />
  <path
    d="M15.22 9.444L12.438.88a17.925 17.925 0 0 0-5.016 2.56l5.297 7.288a8.979 8.979 0 0 1 2.502-1.284z"
    opacity=".95"
  />
</svg>
`;
